--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "lib": [
-            "esnext"
-        ],
+        "lib": ["esnext"],
+        "target": "ES2021",
         "experimentalDecorators": true,
         "strict": true
     }
